--- a/4_Layers/Classification.ipynb
+++ b/4_Layers/Classification.ipynb
@@ -43,11 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "dd10a5d2-84ff-4f40-ae14-4ef511ae8d3b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Code that creates the layers' classification tables\n",
     "#Import the different functions that correspond to the different approaches that determines the layers of a vertical profiles\n",
     "from inflexion_points import inflexion_points     #1st approach\n",
     "from maxmin import maxmin, maxmin_2               #2nd and 3rd approach\n",
@@ -73,9 +74,9 @@
     "    layers1[a]=list(table1[table1==a].index)\n",
     "    layers2[b]=list(table2[table2==b].index)\n",
     "    layers3[c]=list(table3[table3==c].index)\n",
-    "layers1.index.name = '1st approach. Nº of layers - [ncast profile]'\n",
-    "layers2.index.name = '2nd approach. Nº of layers - [ncast profile]'\n",
-    "layers3.index.name = '3rd approach. Nº of layers - [ncast profile]'"
+    "layers1.index.name = 'Nº of layers (1st approach) - [ncast profile]'\n",
+    "layers2.index.name = 'Nº of layers (2nd approach) - [ncast profile]'\n",
+    "layers3.index.name = 'Nº of layers (3rd approach) - [ncast profile]'"
    ]
   },
   {
@@ -106,14 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "7def5efe-018e-4f1f-9c4d-cadaf2092780",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1st approach. Nº of layers - [ncast profile]\n",
+       "Nº of layers (1st approach) - [ncast profile]\n",
        "2                                 [09, 14, 34, 35, 46]\n",
        "3     [10, 11, 12, 13, 16, 21, 22, 27, 28, 29, 33, 36]\n",
        "4    [19, 25, 26, 30, 31, 32, 37, 38, 41, 42, 43, 4...\n",
@@ -123,7 +124,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "26fea223-bbd7-4d00-b230-0d4036a9ffaa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2nd approach. Nº of layers - [ncast profile]\n",
+       "Nº of layers (2nd approach) - [ncast profile]\n",
        "2                     [09, 10, 11, 13, 14, 17, 21, 22]\n",
        "3     [12, 15, 16, 19, 28, 29, 33, 34, 35, 36, 45, 46]\n",
        "4    [26, 27, 30, 31, 32, 37, 38, 39, 40, 41, 42, 4...\n",
@@ -158,7 +159,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,14 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "b8ef82eb-6c08-4c8c-9855-902b59e3b003",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3rd approach. Nº of layers - [ncast profile]\n",
+       "Nº of layers (3rd approach) - [ncast profile]\n",
        "2                     [09, 10, 11, 13, 14, 17, 21, 22]\n",
        "3     [12, 15, 16, 19, 28, 29, 33, 34, 35, 36, 45, 46]\n",
        "4    [24, 26, 27, 30, 31, 32, 37, 38, 39, 40, 41, 4...\n",
@@ -193,7 +194,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,30 +202,6 @@
    "source": [
     "layers3"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f4c988e-4a13-455f-abb6-a1cc25773257",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03eebc9d-e351-4876-b642-41d447f1e7b3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38469d95-7479-4216-994a-0fd7923074fa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
